--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ pydot = "^1.4.1"
 graphviz = "^0.16"
 tensorflow-gpu = "2.5"
 albumentations = "^0.5.2"
+jupyter = "^1.0.0"
+tensorflowjs = {extras = ["wizard"], version = "^3.6.0"}
 
 [tool.poetry.dev-dependencies]
 
