--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,13 @@ keract = "^4.4.0"
 tensorflow-datasets = "^4"
 morty = "0.2.3-dev"
 ipykernel = "^5.4.3"
-matplotlib = "^3.3.4"
+matplotlib = "^3.4.2"
 pydot = "^1.4.1"
 graphviz = "^0.16"
 tensorflow-gpu = "2.5"
 albumentations = "^0.5.2"
 jupyter = "^1.0.0"
-tensorflowjs = {extras = ["wizard"], version = "^3.6.0"}
+opencv-python = "^4.5.2"
 
 [tool.poetry.dev-dependencies]
 
