--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ tensorflow-gpu = "2.5"
 albumentations = "^0.5.2"
 jupyter = "^1.0.0"
 opencv-python = "^4.5.2"
+wandb = "^0.10.30"
 
 [tool.poetry.dev-dependencies]
 
