Performed experiments with optimizers. Made optimizers configurable

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ wandb = "^0.10.30"
 tensorflowjs = "^3.6.0"
 tf-explain = "^0.3.0"
 shap = "^0.39.0"
+tensorflow-addons = "^0.13.0"
 
 [tool.poetry.dev-dependencies]
 
